<resources>
    <string name="app_name">NoteBook</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="setting">设置</string>
    <string name="sync">同步</string>
    <string name="about">关于</string>
    <string name="search_note">搜索笔记</string>
    <string name="label">标签</string>
    <string name="note_content">笔记内容</string>
    <string name="save">保存</string>
    <string name="convention">常规</string>
    <string name="right_hand_mode">右手操作</string>
    <string name="right_hand_mode_summary">开启右手操作模式，侧边栏将从右边划开，默认从左边划开</string>
    <string name="right_hand_mode_key">right_hand_mode_key</string>
    <string name="card_note_item_layout_key">card_note_item_layout_key</string>
    <string name="card_note_item_layout">卡片式笔记</string>
    <string name="sync_account_key">sync_account_key</string>
    <string name="sync_account">同步账号</string>
    <string name="other">其他</string>
    <string name="advice_feedback_key">advice_feedback_key</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="give_favor_key">give_favor_key</string>
    <string name="give_favor">给应用点赞</string>
    <string name="change_theme">change_theme</string>
    <string name="change_theme_title">更换主题</string>
    <string name="addmenu">添加</string>
    <array name="array_menu">
        <item>学习笔记</item>
        <item>工作笔记</item>
        <item>生活笔记</item>
        <item>其他笔记</item>
        <item>回收站</item>
    </array>
</resources>
